[tool.poetry]
name = "atcorder-local"
version = "0.1.0"
description = ""
authors = ["piyota0901 <piyo.tatsu.0901@gmail.com>"]
readme = "README.md"
packages = [{include = "atcorder_local"}]

[tool.poetry.dependencies]
python = "3.10.8"
online-judge-tools = "^11.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
